# qworship

./: CMakeLists.txt
src/: CMakeLists.txt  Lyrics.cpp  Lyrics.h  LyricsModel.cpp  LyricsModel.h  LyricsSection.cpp  LyricsSection.h  main.cpp  qworship.qrc
src/lang/: pl_PL.ts
src/qml/: TabItem.qml  TabLive.qml  TabLyrics.qml  TabSequence.qml  TabSettings.qml  qworship.qml
test/: CMakeLists.txt  tu_Lyrics.cpp  tu_Lyrics.h  tu_LyricsSection.cpp  tu_LyricsSection.h
